# obi

./: .gitignore  Cargo.toml  Cargo_bevy.toml  DEVBLOG.md  LINKs.md  README.md  TODO.md  bevy_wasm.sh  obi_wasm.sh  other_notes.md
.zed/: debug.hide_json_hide  debug.json  settings.json  tasks.json
assets/: bau64.json  bbox.json  relation.json  way.json
examples/: api_lib.rs  async.rs  async_json.rs  async_lib.rs  bevy.rs  bevy_wasm.rs  custom_asset.rs  m_async.rs  obi.rs  obi_wasm.rs  rend3.rs  test _neg.rs  test.rs  test_bau.rs
examples/osm_obi/: mod.rs
examples/rend3/: Cargo.toml
examples/rend3/src/: main.rs
gdb_Test/: main  main.rs
oma/: AndFilter.java  OmaReader.java  oma_reader.rs
src/: api_in.rs  api_out.rs  bevy_control.rs  bevy_ui.rs  control.rs  f4control.rs  footprint.rs  input_api.rs  input_json.rs  input_osm_json.rs  input_osm_lib.rs  internal_api_in.rs  json_osm.rs  kernel_in.rs  kernel_out.rs  lib.rs  main.rs  main_async.rs  map.json  obi_api_in.rs  obi_api_out.rs  obi_async.rs  osm2layers.rs  out.json  rend3_ui.rs  render.rs  render_3d.rs  shape.rs  symbolic_3d.rs  tagticks.rs  to_3d.rs  wasm_main.rs_wasm  way.json
